[package]
name = "neutral"
authors = ["Maximilien DI DIO <mdidio@pm.me>"]
version = "0.2.5"
edition = "2021"
description = "Unofficial rust client for neutrinoapi.com"
keywords = ["neutrinoapi", "client", "api"]
repository = "https://github.com/Diskyver/neutral"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
hyper-tls = "0.5"
lazy_static = "1.4.0"
http = "0.2.5"
mockito = "0.30.0"
futures = "0.3.17"
assert_approx_eq = "1.1.0"
serde_with = "1.14.0"
secrecy = "0.8.0"
neutral_types = "0.2.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.hyper]
version = "0.14"
features = ["full"]

[dependencies.serde]
version = "1"
features = ['derive']

[lib]
name = "neutral"
path = "src/lib.rs"
